# MVCApi/Controllers/ProductController.cs
@@ -40,10 +40,27 @@ namespace MVCApi.Controllers
         }
 
         [HttpGet]
-        public async Task<ActionResult<IPaginatedList<ProductDto>>> GetPaginatedProducts([FromQuery] int pageNumber, [FromQuery] int pageSize, [FromQuery] string currencyCode) 
+        public async Task<ActionResult<IPaginatedList<ProductDto>>> GetPaginatedProducts(
+            [FromQuery] int pageNumber,
+            [FromQuery] int pageSize,
+            [FromQuery] string currencyCode) 
         {
             var products = await _mediator.Send(new GetProductsPaginated { 
                 PageNumber = pageNumber, PageSize = pageSize, CurrencyCode = currencyCode
+            });
+
+            return Ok(products);
+        }
+
+        [HttpGet]
+        public async Task<ActionResult<IPaginatedList<ProductDto>>> GetPaginatedProductsByCategory(
+            [FromQuery] int pageNumber,
+            [FromQuery] int pageSize,
+            [FromQuery] string currencyCode,
+            [FromQuery] Guid categoryId) 
+        {
+            var products = await _mediator.Send(new GetProductsPaginatedByCategory { 
+                PageNumber = pageNumber, PageSize = pageSize, CurrencyCode = currencyCode, CategoryId = categoryId
             });
 
             return Ok(products);
